NetBSD Problem Report #29621
From www@netbsd.org Tue Mar 8 00:45:04 2005
Return-Path: <www@netbsd.org>
Received: by narn.netbsd.org (Postfix, from userid 31301)
id 3FDEA63B104; Tue, 8 Mar 2005 00:45:04 +0000 (UTC)
Message-Id: <20050308004504.3FDEA63B104@narn.netbsd.org>
Date: Tue, 8 Mar 2005 00:45:04 +0000 (UTC)
From: uwe@netbsd.org
Reply-To: uwe@netbsd.org
To: gnats-bugs@netbsd.org
Subject: Unable to compile sh3 kernels with KSTACK_DEBUG
X-Send-Pr-Version: www-1.0
>Number: 29621
>Category: port-sh3
>Synopsis: Unable to compile sh3 kernels with KSTACK_DEBUG
>Confidential: no
>Severity: non-critical
>Priority: low
>Responsible: port-sh3-maintainer
>State: closed
>Class: sw-bug
>Submitter-Id: net
>Arrival-Date: Tue Mar 08 00:46:01 +0000 2005
>Closed-Date: Tue Mar 08 22:06:23 +0000 2005
>Last-Modified: Tue Mar 08 22:06:23 +0000 2005
>Originator: Valeriy E. Ushakov
>Release: current
>Organization:
>Environment:
NetBSD nada 2.99.16 NetBSD 2.99.16 (NADA) #0: Mon Mar 7 21:01:53 MSK 2005 uwe@sampo:/export/netbsd/cvs/src/sys/arch/hpcsh/compile/NADA hpcsh
>Description:
Kernel option KSTACK_DEBUG has bitrotted after proc => lwp migration.
db_stackcheck_cmd() in sys/arch/sh3/sh3/db_interface.c does not compile
>How-To-Repeat:
Try to compile a kernel with "options KSTACK_DEBUG" in the config.
>Fix:
>Release-Note:
>Audit-Trail:
Responsible-Changed-From-To: kern-bug-people->port-sh3-maintainer
Responsible-Changed-By: uwe@netbsd.org
Responsible-Changed-When: Tue, 08 Mar 2005 00:51:44 +0000
Responsible-Changed-Why:
Misfiled.
From: "Valeriy E. Ushakov" <uwe@netbsd.org>
To: gnats-bugs@netbsd.org
Cc:
Subject: PR/29621 CVS commit: src/sys/arch/sh3/sh3
Date: Tue, 8 Mar 2005 22:04:22 +0000 (UTC)
Module Name: src
Committed By: uwe
Date: Tue Mar 8 22:04:22 UTC 2005
Modified Files:
src/sys/arch/sh3/sh3: db_interface.c
Log Message:
db_stackcheck_cmd: catch up with proc => lwp changes.
This is just a quick fix to make KSTACK_DEBUG kernels compilable.
Formatting needs improvment (group lwps from one process together, etc).
PR port-sh3/29621
To generate a diff of this commit:
cvs rdiff -r1.25 -r1.26 src/sys/arch/sh3/sh3/db_interface.c
Please note that diffs are not public domain; they are subject to the
copyright notices on the relevant files.
State-Changed-From-To: open->closed
State-Changed-By: uwe@netbsd.org
State-Changed-When: Tue, 08 Mar 2005 22:06:23 +0000
State-Changed-Why:
Fixed.
>Unformatted:
(Contact us)
$NetBSD: query-full-pr,v 1.39 2013/11/01 18:47:49 spz Exp $
$NetBSD: gnats_config.sh,v 1.8 2006/05/07 09:23:38 tsutsui Exp $
Copyright © 1994-2007
The NetBSD Foundation, Inc. ALL RIGHTS RESERVED.