db_stackcheck_cmd: catch up with proc => lwp changes. This is just a quick fix to make KSTACK_DEBUG kernels compilable. Formatting needs improvment (group lwps from one process together, etc). PR port-sh3/29621